--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -22,7 +22,7 @@ html {
 
 body {
   min-height: 100vh;
-  text-rendering: optimizeSpeed;
+  text-rendering: optimizespeed;
   line-height: 1.5;
   font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", Meiryo,
     "メイリオ", Osaka, "MS PGothic", arial, helvetica, sans-serif;
